Add redis container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,12 @@ services:
       - 27017:27017
     volumes:
       - mongodata:/data/db
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
 volumes:
   mongodata:
+  redisdata:
